<resources>
    <string name="app_name">Tourist Guide</string>
    <string name="settings_textview">Settings</string>
    <string name="choose_lang_text">English</string>
    <string name="choose_lang_text_fr">français</string>
    <string name="english_language">en</string>
    <string name="french_language">fr</string>
    <string name="next_button">Next</string>
    <string name="pashima_details">A pashmina can be used for many things while travelling.
        Ladies can use it to cover up in Middle Eastern countries or churches and temples.
        Men can use it to cover their heads on hot days.
        It can be used as a pillowcase or blanket, a top or a skirt.</string>
    <string name="head_lamp_details">A headlamp is good to bring on any trip.
        You can use it on night walks or for reading on an overnight train ride.
        A headlamp also makes activities like climbing,
        biking and hiking possible in the dark.</string>
    <string name="dry_lite_towel_details">It is the fastest drying towel you will ever own
        and it isn’t bulky like a typical towel,
        giving you more space to pack other things.
        It may cost a bit more than a regular towel,
        but trust me when I tell you that it will become
        one of your favourite items to pack for your travels.</string>
    <string name="water_filter_details">
        Tap water may be okay for the locals but undrinkable for a foreigner.
        That is because the water in your country has different bacteria than those in other areas
        and your body isn’t immune to the unfamiliar strains.
        That is why it is often recommended to drink bottled water when travelling.
        However, this can get costly.
        That is why investing in a water filtration pump is a great way to save money
        and drink clean filtered water wherever you go.
    </string>
    <string name="door_stop_details">
        What could you possibly use a doorstop for on your travels?
        The answer is for your own safety.
        Even if you are staying in a nice-looking hostel, guesthouse or hotel room,
        it’s never a bad idea to be extra cautious of your stuff and,
        more importantly, your own safety.
        Wedging a doorstop in your room’s door before heading to bed
        will allow you to detect if anyone is trying to enter your room while you are sleeping.
    </string>
    <string name="info_details_button">Details</string>
    <string name="welcome_message">Welcome to Tourist Guide.
        Click Next for your must have five items for your trip</string>

    <string name="search_pashmina">Pashmina Scarf</string>
    <string name="search_headlamp">Head Lamp</string>
    <string name="search_dry_lite_towel">Dry Lite Towel</string>
    <string name="search_water_filter">Portable Water Filter</string>
    <string name="search_door_stop">Door Stop</string>

    <string name="pashmina_name">Pashmina</string>
    <string name="head_lamp_name">Head Lamp</string>
    <string name="dry_lite_towel_name">Dry Lite Towel</string>
    <string name="water_filter_name">Water Filter</string>
    <string name="door_stop_name">Door Stop</string>
    <string name="feedback_name">Feedback</string>
    <string name="feedback_textview">
        Thank you for using the app.
        Take a moment to improve the app by giving us your feedback and suggestion.
    </string>
    <string name="contact_name_hint">Enter name:</string>
    <string name="enter_email_hint">Enter your email:</string>
    <string name="rating_message">Rate the app!</string>
    <string name="main_message_hint">Enter your feedback here:</string>
    <string name="send_button_name">Send</string>
    <string name="email_address">mellitus2005@yahoo.com</string>
    <string name="feedback_email_subject">Feedback from</string>
</resources>
