<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="true"
    tools:context="com.example.android.touristguide.FiveItemsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            style="@style/five_items_textviw_style"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/pashmina"
            android:onClick="onClickPashmina"
            android:text="@string/pashmina_name" />

        <TextView
            style="@style/five_items_textviw_style"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="onClickDoorStop"
            android:background="@color/head_lamp"
            android:text="@string/head_lamp_name" />

        <TextView
            style="@style/five_items_textviw_style"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="onClickDryLiteTowel"
            android:background="@color/dry_lite_towel"
            android:text="@string/dry_lite_towel_name" />

        <TextView
            style="@style/five_items_textviw_style"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="onClickWaterFilter"
            android:background="@color/water_filter"
            android:text="@string/water_filter_name" />

        <TextView
            style="@style/five_items_textviw_style"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="onClickDoorStop"
            android:background="@color/door_stop_item"
            android:text="@string/door_stop_name" />

        <TextView
            style="@style/five_items_textviw_style"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="onClickFeedback"
            android:background="@color/feedback_color"
            android:text="@string/feedback_name" />
    </LinearLayout>
</ScrollView>
