<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.touristguide.FeedbackActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/feedback_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:text="@string/feedback_textview"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/feedback_text"
            android:layout_marginTop="10dp"
            android:hint="@string/contact_name_hint"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_edittext"
            android:hint="@string/enter_email_hint"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/rating_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_edittext"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"
            android:text="@string/rating_message"
            android:textSize="16sp" />

        <RatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rating_message"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:elevation="4dp"
            android:numStars="5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rating"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/message_body_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/main_message_hint"
                android:inputType="textMultiLine|textCapSentences"
                android:padding="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="5dp"
                android:onClick="sendEmail"
                android:paddingEnd="10dp"
                android:text="@string/send_button_name" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>

