<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.touristguide.PashminaActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/pashmina_textview"
            style="@style/textview_style"
            android:text="@string/pashmina_name" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pashmina_imageview"
            android:src="@drawable/pashmina"
            android:scaleType="centerCrop"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:layout_below="@id/pashmina_textview" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:elevation="4dp"
            android:id="@+id/pashmina_desc_textview"
            android:layout_below="@id/pashmina_imageview"
            android:text="@string/pashima_details"
            android:textSize="20sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:id="@+id/pashmina_detail_button"
            android:layout_marginTop="10dp"
            android:layout_below="@id/pashmina_desc_textview"
            android:drawableStart="@android:drawable/ic_menu_info_details"
            android:onClick="onClickPashminaDetails"
            android:text="@string/info_details_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="10dp"
            android:drawableStart="@android:drawable/ic_media_ff"
            android:onClick="onNextButtonClicked"
            android:layout_below="@id/pashmina_desc_textview"
            android:layout_alignParentRight="true"
            android:text="@string/next_button" />

    </RelativeLayout>
</ScrollView>

